Enable -Werror by default
MSVC still requires more work for /WX (the MSVC equivalent of Werror)
so that flag will have to be added later

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,7 +95,7 @@ if(MSVC)
   target_compile_definitions(
     g_options
     INTERFACE NOMINMAX _CRT_SECURE_NO_DEPRECATE _CRT_SECURE_NO_WARNINGS _CRT_NONSTDC_NO_DEPRECATE _USE_MATH_DEFINES)
-  target_compile_options(g_warnings INTERFACE /W3)
+  target_compile_options(g_warnings INTERFACE /W3) # TODO: Add the MSVC equivalent of Werror
 else()
   if(ENABLE_ASAN)
     target_compile_options(g_options INTERFACE -fsanitize=address)
@@ -106,7 +106,7 @@ else()
     target_compile_options(
       g_warnings
       INTERFACE -Wall
-                # -Werror turn on, someday
+                -Werror
                 -Wextra
                 -Wshadow
                 -Wunused
