Switch to zlib-ng/minizip-ng libraries
System library support isn't included right now because the current
zlib-ng release doesn't have a required file for find_package() compatibility

Also there's a hack for minizip-ng to find the static zlib-ng library (hopefully
that can be removed in the future)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,8 @@
 # Licensed under the zlib license
 # Check the included LICENSE.txt for details
 
-# For object library linking
-cmake_minimum_required(VERSION 3.12)
+# For link creation (using CREATE_LINK in file())
+cmake_minimum_required(VERSION 3.14)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
