--- a/src/main/CMakeLists.txt
+++ b/src/main/CMakeLists.txt
@@ -1,12 +1,43 @@
-find_package(minizip)
-if(NOT minizip_FOUND)
-  # Use our own, if there's no minizip there's probably also no zlib Also avoid
-  # risks of having to link to BZip2 on some platforms
-  message(INFO "Using built-in zlib and minizip")
-  add_subdirectory("${PROJECT_SOURCE_DIR}/lib/zlib"
-                   "${CMAKE_CURRENT_BINARY_DIR}/zlib" EXCLUDE_FROM_ALL)
-else()
-  find_package(ZLIB)
+# Add minizip-ng as a dependency
+# On initial set up, minizip-ng decides whether to use zlib-ng (over regular zlib) by searching for the lib, but it
+# wouldn't find it because it hasn't been built yet. We trick its CMake script by setting the variables that indicate
+# the lib was found with values that will be correct once it is built. zlib-ng will be built before minizip-ng because
+# we added it in the root CMakeLists.txt file.
+
+option(USE_VENDORED_ZLIBNG "Use the vendored version of zlib-ng" ON)
+
+if (USE_VENDORED_ZLIBNG)
+  #include zlib-ng sans tests
+  set(BUILD_SHARED_LIBS OFF)
+
+  set(ZLIB_ENABLE_TESTS OFF)
+  set(ZLIBNG_ENABLE_TESTS OFF)
+  set(WITH_GTEST OFF)
+  add_subdirectory("${PROJECT_SOURCE_DIR}/lib/zlib-ng" "${CMAKE_BINARY_DIR}/lib/zlib-ng" EXCLUDE_FROM_ALL)
+
+  set(ZLIBNG_FOUND TRUE)
+  set(ZLIBNG_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/lib/zlib-ng" "${CMAKE_BINARY_DIR}/lib/zlib-ng")
+  set(ZLIBNG_LIBRARY $<TARGET_FILE:zlibstatic>)
+endif()
+
+# Configure minizip-ng to use zlib and none of the other options
+set(MZ_COMPAT ON)
+set(MZ_ZLIB ON)
+set(MZ_BZIP2 OFF)
+set(MZ_LZMA OFF)
+set(MZ_ZSTD OFF)
+set(MZ_LIBCOMP OFF)
+set(MZ_PKCRYPT OFF)
+set(MZ_WZAES OFF)
+set(MZ_OPENSSL OFF)
+set(MZ_DECOMPRESS_ONLY ON)
+set(SKIP_INSTALL_ALL ON)
+
+# Add minizip-ng subdirectory
+add_subdirectory("${PROJECT_SOURCE_DIR}/lib/minizip-ng" "${CMAKE_BINARY_DIR}/lib/minizip-ng" EXCLUDE_FROM_ALL)
+
+if (USE_VENDORED_ZLIBNG)
+  add_dependencies(minizip zlibstatic)
 endif()
 
 message(INFO "Using built-in unarr")
@@ -14,8 +45,7 @@ set(ENABLE_7Z OFF CACHE BOOL "Build with 7z support" FORCE)
 set(USE_SYSTEM_BZ2 OFF CACHE BOOL "Build with system bzip2 if possible" FORCE)
 set(BUILD_SHARED_LIBS OFF CACHE BOOL "Build libunarr as a shared library" FORCE)
 set(USE_SYSTEM_ZLIB OFF CACHE BOOL "Build with system zlib if possible" FORCE)
-add_subdirectory("${PROJECT_SOURCE_DIR}/lib/unarr"
-        "${CMAKE_CURRENT_BINARY_DIR}/unarr" EXCLUDE_FROM_ALL)
+add_subdirectory("${PROJECT_SOURCE_DIR}/lib/unarr" "${CMAKE_BINARY_DIR}/lib/unarr" EXCLUDE_FROM_ALL)
 
 file(GLOB_RECURSE MAIN_FILES "${PROJECT_SOURCE_DIR}/src/main/*.cpp"
      "${PROJECT_SOURCE_DIR}/src/main/*.h")
@@ -37,5 +67,5 @@ target_include_directories(vgmtranscore PUBLIC
         ${CMAKE_CURRENT_BINARY_DIR})
 target_link_libraries(
   vgmtranscore
-  PUBLIC spdlog::spdlog ZLIB::ZLIB unarr minizip tinyxml mio
+  PUBLIC spdlog::spdlog unarr zlibstatic minizip tinyxml mio
   PRIVATE g_options g_warnings)
