--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -112,27 +112,28 @@ jobs:
     runs-on: windows-2022
     strategy:
       matrix:
-        target: ["x64"]
+        target: ['x64', 'arm64']
     name: Windows, ${{ matrix.target }}
     steps:
        - uses: actions/checkout@v4
          with:
           submodules: recursive
           show-progress: false
-       - uses: ilammy/msvc-dev-cmd@v1
+       - name: Source vcvars for ${{ matrix.target }}
+         uses: ilammy/msvc-dev-cmd@v1
          with:
-            arch: ${{ matrix.target }}
+            arch: ${{ matrix.target != 'x64' && (format('{0}_{1}', 'amd64', matrix.target)) || matrix.target }}
        - name: "Prepare build"
          run: |
           echo "BRANCH=$(git rev-parse --abbrev-ref HEAD)" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-          cmake --preset win-x64
+          cmake --preset win-${{ matrix.target }}
        - name: "Build project"
-         run: cmake --build --preset win-x64-release
+         run: cmake --build --preset win-${{ matrix.target }}-release
        - name: "Package artifact"
-         run: 7z a "VGMTrans.zip" -r .\build\win-x64\bin*
+         run: 7z a "VGMTrans.zip" -r .\build\win-${{ matrix.target }}\bin*
        - name: "Upload artifact"
          uses: actions/upload-artifact@v4
          with:
-           name: VGMTrans-${{ github.sha }}-${{ env.BRANCH }}-x86_64-${{ runner.os }}
+           name: VGMTrans-${{ github.sha }}-${{ env.BRANCH }}-${{ matrix.target }}-${{ runner.os }}
            path: VGMTrans.zip
        
