menu: flesh out the RawFile MenuManager menu and use it in RawFileListView menu: make MenuManager a singleton() menu: move Command base class and types into its own header file to resolve circular dependency

--- a/src/ui/qt/CMakeLists.txt
+++ b/src/ui/qt/CMakeLists.txt
@@ -65,6 +65,7 @@ add_executable(
   services/Settings.h
   services/NotificationCenter.cpp
   services/NotificationCenter.h
+  services/commands/Command.h
   services/commands/SaveCommands.h
   services/commands/GeneralCommands.h
   util/Colors.h
