--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,6 +41,7 @@ jobs:
             -verbose=3 -dmg -always-overwrite -appstore-compliant
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v1
+        if: ${{ github.event_name != 'pull_request' }}
         with:
           subject-name: VGMTrans-${{ github.sha }}-${{ env.GITHUB_REF_NAME }}-${{ matrix.target }}-${{ runner.os }}
           subject-path: "build/macos-${{ matrix.target }}/bin/VGMTrans.dmg"
@@ -118,6 +119,7 @@ jobs:
           mv VGMTrans*.AppImage VGMTrans.AppImage
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v1
+        if: ${{ github.event_name != 'pull_request' }}
         with:
           subject-name: VGMTrans-${{ github.sha }}-${{ env.BRANCH }}-x86_64-${{ runner.os }}
           subject-path: "build/linux-x64/VGMTrans.AppImage"
@@ -155,6 +157,7 @@ jobs:
          run: 7z a "VGMTrans.zip" -r .\build\win-${{ matrix.target }}\bin*
        - name: Generate artifact attestation
          uses: actions/attest-build-provenance@v1
+         if: ${{ github.event_name != 'pull_request' }}
          with:
            subject-name: VGMTrans-${{ github.sha }}-${{ env.BRANCH }}-${{ matrix.target }}-${{ runner.os }}
            subject-path: VGMTrans.zip
