- remove renaming of bin directory in windows build, and include version in zip filename.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -197,15 +197,11 @@ jobs:
               throw "VERSION not found in CMakeLists.txt"
             }
 
-       - name: "Rename bin directory"
-         run: |
-           Rename-Item ".\build\win-${{ matrix.target }}\bin" "vgmtrans-${{ env.VERSION }}-windows-${{ matrix.target }}"
-
        - name: "Delete empty directories"
          run: Get-ChildItem -Directory -Recurse | Where-Object { $_.GetFileSystemInfos().Count -eq 0 } | Remove-Item -Force -Recurse
 
        - name: "Package artifact"
-         run: 7z a "VGMTrans.zip" -r ".\build\win-${{ matrix.target }}\vgmtrans-${{ env.VERSION }}-windows-${{ matrix.target }}\*"
+         run: 7z a "VGMTrans$-{{ env.VERSION }}.zip" -r ".\build\win-${{ matrix.target }}\bin\*"
 
        - name: Generate artifact attestation
          uses: actions/attest-build-provenance@v1
