--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -173,45 +173,51 @@ jobs:
          with:
           submodules: recursive
           show-progress: false
-       - name: Source vcvars for ${{ matrix.target }}
+
+       - name: "Source vcvars for ${{ matrix.target }}"
          uses: ilammy/msvc-dev-cmd@v1
          with:
             arch: ${{ matrix.target != 'x64' && (format('{0}_{1}', 'amd64', matrix.target)) || matrix.target }}
+
        - name: "Prepare build"
          run: |
           echo "BRANCH=$(git rev-parse --abbrev-ref HEAD)" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
           cmake --preset win-${{ matrix.target }}
+
        - name: "Build project"
          run: cmake --build --preset win-${{ matrix.target }}-release --target vgmtrans
 
-       - name: "Extract Version"
-         id: get_version
+       - name: "Extract Version and Set Artifact Path"
+         id: set_artifact_path
          run: |
-            $content = Get-Content CMakeLists.txt | Out-String
-            $pattern = 'project\s*\(\s*VGMTrans\s+VERSION\s+(\d+\.\d+)'
-            $match = [regex]::Match($content, $pattern)
-            if ($match.Success) {
+           $content = Get-Content CMakeLists.txt | Out-String
+           $pattern = 'project\s*\(\s*VGMTrans\s+VERSION\s+(\d+\.\d+)'
+           $match = [regex]::Match($content, $pattern)
+           if ($match.Success) {
                $version = $match.Groups[1].Value.Trim()
                echo "VERSION=$version" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-            } else {
-              throw "VERSION not found in CMakeLists.txt"
-            }
+               $artifactPath = "VGMTrans-$version.zip"
+               echo "ARTIFACT_PATH=$artifactPath" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+           } else {
+               throw "VERSION not found in CMakeLists.txt"
+           }
 
        - name: "Delete empty directories"
          run: Get-ChildItem -Directory -Recurse | Where-Object { $_.GetFileSystemInfos().Count -eq 0 } | Remove-Item -Force -Recurse
 
        - name: "Package artifact"
-         run: 7z a "VGMTrans$-{{ env.VERSION }}.zip" -r ".\build\win-${{ matrix.target }}\bin\*"
+         run: 7z a ${{ env.ARTIFACT_PATH }} -r ".\build\win-${{ matrix.target }}\bin\*"
 
        - name: Generate artifact attestation
          uses: actions/attest-build-provenance@v1
          if: ${{ github.event_name != 'pull_request' }}
          with:
            subject-name: VGMTrans-${{ github.sha }}-${{ env.BRANCH }}-${{ matrix.target }}-${{ runner.os }}
-           subject-path: VGMTrans.zip
+           subject-path: ${{ env.ARTIFACT_PATH }}
+
        - name: "Upload artifact"
          uses: actions/upload-artifact@v4
          with:
            name: VGMTrans-${{ github.sha }}-${{ env.BRANCH }}-${{ matrix.target }}-${{ runner.os }}
-           path: VGMTrans.zip
+           path: ${{ env.ARTIFACT_PATH }}
        
