Improve macOS dmg packaging (#536)
* update the github workflow to package the dmg using create-dmg
* add a script to de-quarantine and self-sign the app
* add a README to explain the fix script
* remove win-arm64 target, temporarily

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,13 +32,43 @@ jobs:
         run: cmake --preset "macos-${{ matrix.target }}"
       - name: "Build project"
         # $(sysctl -n hw.logicalcpu) is required to not make XCode spawn infinite threads...
-        run: cmake --build --preset "macos-${{ matrix.target }}-release" --parallel $(sysctl -n hw.logicalcpu)
+        run: cmake --build --preset "macos-${{ matrix.target }}-release" --parallel $(sysctl -n hw.logicalcpu) --target vgmtrans
+
       - name: "Package DMG (macOS)"
         working-directory: "build/macos-${{ matrix.target }}/"
         run: |
           ${{ env.HOMEBREW_PREFIX }}/bin/macdeployqt \
             bin/VGMTrans.app \
-            -verbose=3 -dmg -always-overwrite -appstore-compliant
+            -verbose=3 -always-overwrite -appstore-compliant
+
+      - name: "Checkout create-dmg"
+        uses: actions/checkout@v4
+        with:
+          repository: create-dmg/create-dmg
+          path: "./build/macos-${{ matrix.target }}/create-dmg"
+          ref: master
+
+      - name: Build macOS DMG
+        shell: bash
+        working-directory: "build/macos-${{ matrix.target }}/"
+        run: |
+          ./create-dmg/create-dmg \
+            --no-internet-enable \
+            --volname "VGMTrans" \
+            --volicon "bin/VGMTrans.app/Contents/Resources/appicon.icns" \
+            --background "${{ github.workspace }}/bin/dmg/bg.tif" \
+            --text-size 12 \
+            --window-pos 400 400 \
+            --window-size 550 380 \
+            --icon-size 80 \
+            --icon "VGMTrans.app" 250 113 \
+            --hide-extension "VGMTrans.app" \
+            --app-drop-link 460 110 \
+            --add-file "Fix Script" "${{ github.workspace }}/bin/dmg/selfsign" 250 258 \
+            --add-file "README_MACOS.txt" "${{ github.workspace }}/bin/dmg/README_MACOS.txt" 460 258 \
+            "bin/VGMTrans.dmg" \
+            "bin"
+
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v1
         if: ${{ github.event_name != 'pull_request' }}
@@ -132,7 +162,7 @@ jobs:
     runs-on: windows-2022
     strategy:
       matrix:
-        target: ['x64', 'arm64']
+        target: ['x64']
     permissions:
       id-token: write
       contents: read
@@ -152,7 +182,7 @@ jobs:
           echo "BRANCH=$(git rev-parse --abbrev-ref HEAD)" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
           cmake --preset win-${{ matrix.target }}
        - name: "Build project"
-         run: cmake --build --preset win-${{ matrix.target }}-release
+         run: cmake --build --preset win-${{ matrix.target }}-release --target vgmtrans
        - name: "Package artifact"
          run: 7z a "VGMTrans.zip" -r .\build\win-${{ matrix.target }}\bin*
        - name: Generate artifact attestation
