- deployment: update dmg filename to use extracted version string

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,17 @@ jobs:
         with:
           submodules: recursive
           show-progress: false
+      - name: "Extract version from CMakeLists.txt"
+        id: extract_version
+        run: |
+          content=$(cat CMakeLists.txt)  
+          if [[ "$content" =~ project\([[:space:]]*VGMTrans[[:space:]]+VERSION[[:space:]]+([0-9]+\.[0-9]+) ]]; then
+            version="${BASH_REMATCH[1]}"
+            echo "VERSION=$version" >> $GITHUB_ENV
+          else
+            echo "VERSION not found in CMakeLists.txt"
+            exit 1
+          fi
       - name: "Install dependencies"
         run: |
           brew install -f --overwrite qt@6
@@ -33,21 +44,18 @@ jobs:
       - name: "Build project"
         # $(sysctl -n hw.logicalcpu) is required to not make XCode spawn infinite threads...
         run: cmake --build --preset "macos-${{ matrix.target }}-release" --parallel $(sysctl -n hw.logicalcpu) --target vgmtrans
-
       - name: "Package DMG (macOS)"
         working-directory: "build/macos-${{ matrix.target }}/"
         run: |
           ${{ env.HOMEBREW_PREFIX }}/bin/macdeployqt \
             bin/VGMTrans.app \
             -verbose=3 -always-overwrite -appstore-compliant
-
       - name: "Checkout create-dmg"
         uses: actions/checkout@v4
         with:
           repository: create-dmg/create-dmg
           path: "./build/macos-${{ matrix.target }}/create-dmg"
           ref: master
-
       - name: Build macOS DMG
         shell: bash
         working-directory: "build/macos-${{ matrix.target }}/"
@@ -66,20 +74,19 @@ jobs:
             --app-drop-link 520 97 \
             --add-file "Unblock & Sign" "${{ github.workspace }}/bin/dmg/selfsign" 313 280 \
             --add-file "README.txt" "${{ github.workspace }}/bin/dmg/README.txt" 520 280 \
-            "bin/VGMTrans.dmg" \
+            "bin/VGMTrans-v${{ env.VERSION }}.dmg" \
             "bin"
-
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v1
         if: ${{ github.event_name != 'pull_request' }}
         with:
           subject-name: VGMTrans-${{ github.sha }}-${{ env.GITHUB_REF_NAME }}-${{ matrix.target }}-${{ runner.os }}
-          subject-path: "build/macos-${{ matrix.target }}/bin/VGMTrans.dmg"
+          subject-path: "build/macos-${{ matrix.target }}/bin/VGMTrans-v${{ env.VERSION }}.dmg"
       - name: "Upload artifact"
         uses: actions/upload-artifact@v4
         with:
-          name: VGMTrans-${{ github.sha }}-${{ env.GITHUB_REF_NAME }}-${{ matrix.target }}-${{ runner.os }}.dmg
-          path: "build/macos-${{ matrix.target }}/bin/VGMTrans.dmg"
+          name: VGMTrans-${{ github.sha }}-${{ env.GITHUB_REF_NAME }}-${{ matrix.target }}-${{ runner.os }}-v${{ env.VERSION }}.dmg
+          path: "build/macos-${{ matrix.target }}/bin/VGMTrans-v${{ env.VERSION }}.dmg"
   linux:
     runs-on: ubuntu-20.04
     name: Linux, x64
@@ -196,7 +203,7 @@ jobs:
            if ($match.Success) {
                $version = $match.Groups[1].Value.Trim()
                echo "VERSION=$version" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-               $artifactPath = "VGMTrans-$version.zip"
+               $artifactPath = "VGMTrans-v$version.zip"
                echo "ARTIFACT_PATH=$artifactPath" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
            } else {
                throw "VERSION not found in CMakeLists.txt"
